# stochastic-firebreak-placement

./: .gitignore  README.md
cpp_cplex_firebreak/: .gitignore  CMakeLists.txt  Makefile  README.md  build_gpp.sh
cpp_cplex_firebreak/config/: final_candidate_methods_dpv_smoke.txt  final_candidate_methods_fpp_smoke.txt  fpp_new_instances_scaling_instances.csv  fpp_new_instances_scaling_methods.txt  fpp_projected_llbi_scaling_methods.txt  new_method_phase1i_restricted_candidate_smoke.txt  phase11_sub20_debug.txt  phase11_sub20_moderate.txt  phase12_sub20_alpha02_methods_calibration.txt  phase12_sub20_exact_calibration.txt  phase12_sub20_small_test_alpha001.txt  phase12_sub20_small_test_alpha002.txt  phase12_sub20_small_test_alpha003.txt  phase12_sub20_train25_test900_alpha001.txt  phase12_sub20_train25_test900_alpha002.txt  phase12_sub20_train25_test900_alpha003.txt  phase23_dpv_branch_benders_variants_smoke.txt  phase26_method_taxonomy_smoke.txt  phase35_candidate_methods_dpv_controlled.txt  phase35_candidate_methods_fpp_controlled.txt  sub20_exact_alpha001_shared.txt  sub20_exact_alpha002_shared.txt  sub20_exact_alpha003_shared.txt  sub20_smoke.txt
cpp_cplex_firebreak/docs/: WEIGHTED_LANDSCAPES.md  WEIGHTED_LANDSCAPES_AUDIT.md  WEIGHTED_LANDSCAPES_CHANGELOG.md  WEIGHTED_LANDSCAPES_LIMITATIONS.md  WEIGHTED_LANDSCAPES_MIGRATION.md  WEIGHTED_LANDSCAPES_PHASE10.md  WEIGHTED_LANDSCAPES_PHASE4.md  WEIGHTED_LANDSCAPES_PHASE5A.md  WEIGHTED_LANDSCAPES_PHASE5B.md  WEIGHTED_LANDSCAPES_PHASE5C1.md  WEIGHTED_LANDSCAPES_PHASE5C2A.md  WEIGHTED_LANDSCAPES_PHASE5C2B1.md  WEIGHTED_LANDSCAPES_PHASE5C2B2.md  WEIGHTED_LANDSCAPES_PHASE6A.md  WEIGHTED_LANDSCAPES_PHASE6B1.md  WEIGHTED_LANDSCAPES_PHASE6B2A.md  WEIGHTED_LANDSCAPES_PHASE6B2B.md  WEIGHTED_LANDSCAPES_PHASE6B3A.md  WEIGHTED_LANDSCAPES_PHASE6B3B.md  WEIGHTED_LANDSCAPES_PHASE6C1.md  WEIGHTED_LANDSCAPES_PHASE6C2A.md  WEIGHTED_LANDSCAPES_PHASE6C2B.md  WEIGHTED_LANDSCAPES_PHASE6C2C.md  WEIGHTED_LANDSCAPES_PHASE7A.md  WEIGHTED_LANDSCAPES_PHASE7B1.md  WEIGHTED_LANDSCAPES_PHASE7B2.md  WEIGHTED_LANDSCAPES_PHASE8A.md  WEIGHTED_LANDSCAPES_PHASE8B.md  WEIGHTED_LANDSCAPES_PHASE9A.md  WEIGHTED_LANDSCAPES_PHASE9B.md  WEIGHTED_LANDSCAPES_TEST_INVENTORY.md  weighted_landscapes_test_inventory.csv
cpp_cplex_firebreak/include/analysis/: BatchSummaryReporter.hpp  ExperimentAggregator.hpp  GraphDiagnostics.hpp  RuntimeProfiler.hpp
cpp_cplex_firebreak/include/benchmarks/: StaticDpvBenchmark.hpp  StaticDpvMipBenchmark.hpp
cpp_cplex_firebreak/include/benders/: BendersCoefficientCandidateScorer.hpp  BendersCut.hpp  BurnFrequencyCandidateScorer.hpp  CandidateBoundController.hpp  CvarTailAwareBendersCandidateScorer.hpp  CvarTailScoreDiagnostics.hpp  DpvBendersMaster.hpp  DpvBendersSolver.hpp  DpvBranchBendersSolver.hpp  DpvLiftedLowerBound.hpp  DpvScenarioSubproblem.hpp  (+14 more)
cpp_cplex_firebreak/scripts/: aggregate_batch.sh  aggregate_phase12_sub20_train25_test900.sh  analyze_fpp_12mode_benchmark.py  analyze_fpp_lp_vi_diagnostic.py  analyze_fpp_new_instances_scaling_experiment.py  analyze_fpp_projected_llbi_scaling_experiment.py  analyze_sub20_alpha001_002_fpp_exact_tl300.py  analyze_sub20_alpha001_002_fpp_master_lp_relaxation.py  analyze_sub20_global_dominance_preprocessing.py  analyze_sub20_projected_llbi_integral_vs_previous.py  analyze_sub20_projected_llbi_lp_diagnostic.py  analyze_weighted_experiment_results.py  fpp_new_instances_scaling_compact_schema.py  generate_fpp_new_instances_scaling_manifests.py  generate_fpp_projected_llbi_scaling_manifests.py  generate_sub20_alpha001_002_fpp_exact_tl300_manifests.py  generate_sub20_projected_llbi_integral_alpha001_002_tl300_manifests.py  merge_fpp_new_instances_scaling_experiment.py  merge_fpp_projected_llbi_scaling_experiment.py  merge_sub20_alpha001_002_fpp_exact_tl300.py  merge_sub20_projected_llbi_integral_alpha001_002_tl300.py  merge_weighted_experiment_results.py  plot_sub20_alpha001_002_gap_profiles.py  plot_sub20_alpha001_002_performance_profiles.py  prepare_sub20_alpha001_002_shared_splits.py  run_fpp_12mode_benchmark.sh  run_fpp_lp_vi_diagnostic.sh  run_fpp_new20x20_scaling_experiment.sh  run_fpp_new_instances_scaling_experiment.sh  run_fpp_new_instances_scaling_experiment_sub20.sh  run_fpp_new_instances_scaling_manifest_worker.py  run_fpp_projected_llbi_scaling_experiment.sh  run_fpp_projected_llbi_scaling_manifest_worker.py  run_manifest.sh  run_phase11_debug.sh  run_phase12_alpha02_methods_calibration.sh  run_phase12_exact_calibration.sh  run_phase12_small_calibration.sh  run_phase12_sub20_train25_test900_parallel.sh  run_sub20_100train_900test_alpha002_case00.sh  (+65 more)
cpp_cplex_firebreak/src/: main.cpp
cpp_cplex_firebreak/tests/: test_batch_experiment_config.cpp  test_batch_summary_reporter.cpp  test_benders_coefficient_candidate_scorer.cpp  test_benders_cut.cpp  test_burn_frequency_candidate_scorer.cpp  test_burned_area_evaluator.cpp  test_candidate_bound_controller.cpp  test_cell2fire_reader_new_instances.cpp  test_cumulative_propagation_graph.cpp  test_cvar_tail_aware_benders_candidate_scorer.cpp  test_cvar_tail_score_diagnostics.cpp  test_dominator_cuts.cpp  test_dpv_benders_small.cpp  test_dpv_branch_benders_small.cpp  test_dpv_index_builder.cpp  test_dpv_saa_model_structure.cpp  test_dpv_subproblem_structure.cpp  test_experiment_aggregator.cpp  test_experiment_manifest.cpp  test_fpp_benders_small.cpp  test_fpp_branch_benders_small.cpp  test_fpp_combinatorial_benders.cpp  test_fpp_cut_reachability_model.cpp  test_fpp_persistent_scenario_subproblem_manager.cpp  test_fpp_projected_llbi.cpp  test_fpp_recourse_evaluator.cpp  test_fpp_restricted_candidate_branch_benders_small.cpp  test_fpp_saa_model_structure.cpp  test_fpp_strengthening.cpp  test_graph_diagnostics.cpp  test_greedy_heuristics.cpp  test_index_mapper.cpp  test_landscape_weight_generator.cpp  test_landscape_weight_map.cpp  test_node_separator_min_cut.cpp  test_reachability_greedy_warm_start.cpp  test_restricted_candidate_cut_pool.cpp  test_restricted_candidate_maintenance_tracker.cpp  test_restricted_candidate_manager.cpp  test_risk_measure.cpp  (+73 more)
(+181 files in other folders)
